Stuff is happening

--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="dist/styles.css">
   <title>Home</title>
 </head>
 <body>
-<div class="content">
-
+<div class="container">
+  <div class="title-word" data-route="default">Home</div>
+  <div class="title-word" data-route="more">Test This</div>
+  <div class="title-word" data-route="ohno">Hmmm</div>
+</div>
+<div class="container hidden">
+    <div id="default">
+        <h1
+    </div>
+    <div id="more">
+        <h1>Cool times?</h1>
+    </div>
+    <div id="ohno">
+        <h1>Not cool times :( </h1>
+    </div>
 </div>
 <script src="dist/app.min.js"></script>
 </body>
