more stuff some gone

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </div>
 <div class="container hidden">
     <div id="default">
-        <h1
+        <h1>Home</h1>
     </div>
     <div id="more">
         <h1>Cool times?</h1>
