i dunno trying stuff

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <title>Home</title>
 </head>
 <body>
-  <div class="container header text-center">
+  <div class="container text-center header">
       <h1><a href data-go="default">(Home)</a></h1>
   </div>
   <div class="container text-center title-words" data-route="default">
-      <a href data-go="who">Who? <hr /></a>
-      <a href data-go="what">What? <hr /></a>
-      <a href data-go="where">Where? </a>
+      <a href data-go="who">Who?</a>
+      <a href data-go="what">What?</a>
+      <a href data-go="where">Where?</a>
   </div>
   <div class="container">
     <div data-route="who">
